11/10/11 cantera 1.8.0 development begins on autotools chain