@@ -1,1 +1,2 @@
+ 5/09/12 merging with cantera 2.0.0 branch
 11/10/11 cantera 1.8.0 development begins on autotools chain
